<resources>
    <string name="app_name">Cơm nhà</string>
    <string name="facebook_app_id">160568224411760</string>
    <string name="text_tenquan">Tên quán</string>
    <string name="text_btnsendreport">Gửi</string>
    <string name="text_tenMon">Tên món ăn</string>
    <string name="text_themMon">Thêm món ăn</string>
    <string name="text_tinhTP">Tỉnh/Thành phố</string>
    <string name="text_thucdon">Thực đơn</string>
    <string name="text_quanhuyen">Quận/Huyện</string>
    <string name="text_sdt">Số điện thoại</string>
    <string name="text_openningTime">Giờ mở cửa</string>
    <string name="text_start">Từ</string>
    <string name="text_end">Đến</string>
    <string name="text_gia">Giá</string>
    <string name="text_more">Mở rộng</string>
    <string name="text_foodcateg">Loại món ăn</string>
    <string name="text_choosefoodcateg">Chọn loại món ăn</string>
    <string name="text_rategia">Giá</string>
    <string name="text_ratevs">Vệ sinh</string>
    <string name="text_ratepv">Phục vụ</string>
    <string name="text_save">Save</string>
    <string name="text_add">Thêm mới</string>
    <string name="text_foodcateName">Tên loại món</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_address">Địa chỉ</string>
    <string name="text_email">Email</string>
    <string name="text_username">Username</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_confirmPass">Xác nhận mật khẩu</string>
    <string name="text_hoten">Họ Tên</string>
    <string name="text_ho">Họ</string>
    <string name="text_tenLot">Tên lót</string>
    <string name="text_ten">Tên</string>
    <string name="text_birth">Ngày sinh</string>
    <string name="text_signup">Đăng kí</string>
    <string name="text_signin">Đăng nhập</string>
    <string name="text_exit">Thoát</string>
    <string name="text_forgotPass"><u>Quên mật khẩu?</u></string>
    <string name="text_loginFB">Facebook</string>
    <string name="text_loginGmail">Goodle +</string>
    <string name="text_chooseLocation">Chọn địa điểm</string>
    <string name="text_pickProvince">Chọn Tỉnh/Thành Phố</string>
    <string name="text_pickFood">Chọn món ăn</string>
    <string name="text_pickDistrict">Chọn Quận/Huyện</string>
    <string name="text_addfoodCate">Thêm loại món</string>
    <string name="text_title">Tiêu đề</string>
    <string name="text_content">Nội dung</string>
    <string name="text_upImage">Chọn ảnh</string>
    <string name="text_vote">Đánh giá</string>
    <string name="text_hashtag">Tag</string>
    <string name="text_select">Chọn</string>
    <string name="text_taomoi">Tạo mới</string>
    <string name="text_signup_successful">Đăng kí thành công!!!</string>
    <string name="text_addnewFoodCate_successful">Thêm loại món mới thành công!!!</string>
    <string name="text_noti_addloca_succes">Thêm địa điểm thành công</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="text_themdiadiem">Thêm địa điểm mới</string>
    <string name="text_dangreview">Thêm review</string>
    <string name="text_themanh">Thêm ảnh</string>
    <string name="text_comment">Bình luận</string>
    <string name="text_like">Thích</string>
    <string name="text_hello">Xin chào</string>
    <string name="text_user">User</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="txt_writecomment">Viết bình luận......</string>
    <string name="txt_needlogin">Bạn cần đăng nhập</string>
    <string name="txt_noemail">Warning: Chưa nhập email</string>
    <string name="txt_notemail">Error: Email không hợp lệ</string>
    <string name="txt_nopass">Warning: Chưa nhập password</string>
    <string name="txt_noho">Warning: Chưa nhập họ</string>
    <string name="txt_notenlot">Warning: Chưa nhập tên lót</string>
    <string name="txt_noten">Warning: Chưa nhập tên</string>
    <string name="txt_nongsinh">Warning: Chưa nhập ngày-tháng-năm sinh</string>
    <string name="txt_noun">Warning: Chưa nhập tên tài khoản</string>
    <string name="txt_noconfirmpass">Warning: Chưa nhập mật khẩu xác nhận</string>
    <string name="txt_notenquan">Warning: Chưa nhập tên quán</string>
    <string name="txt_nodiachi">Warning: Chưa nhập địa chỉ</string>
    <string name="txt_nogia">Warning: Chưa nhập giá</string>
    <string name="txt_nosdt">Warning: Chưa nhập số điện thoại</string>
    <string name="txt_noopentime">Warning: Chưa nhập giờ mở cửa</string>
    <string name="txt_noprivince">Warning: Chưa nhập Tỉnh/Thành phố</string>
    <string name="txt_nodistrict">Warning: Chưa nhập Quận/Huyện</string>
    <string name="txt_notitle">Warning: Chưa nhập tiêu đề</string>
    <string name="txt_nocontent">Warning: Chưa nhập nội dung</string>
    <string name="txt_nochoseloca">Warning: Chưa chọn địa điểm</string>
    <string name="txt_norate">Warning: Chưa đánh giá</string>
    <string name="txt_giawarn">Warning: Giá cuối cùng phải lớn hơn giá bắt đầu</string>
    <string name="txt_addinlocaerr">Error: Không thể thêm địa điểm mới</string>
    <string name="txt_nochosephoto">Warning: Chưa chọn ảnh nào</string>
    <string name="txt_noTenMon">Warning: Chưa nhập tên món ăn</string>
    <string name="txt_nogiaMon">Warning: Chưa nhập giá món ăn</string>
    <string name="txt_noChoseProvince">Warning: Chưa chọn Tỉnh/Thành phố</string>
    <string name="txt_noChoseDistrict">Warning: Chưa chọn Quận/Huyện</string>
    <string name="txt_noChoseFood">Warning: Chưa chọn món ăn</string>
    <string name="txt_noChoseFoodCate">Warning: Chưa chọn loại món ăn</string>
    <string name="txt_noFoodCateName">Warning: Chưa nhập tên loại món ăn</string>
    <string name="txt_noaddress">Warning: Chưa nhập địa điểm</string>
    <string name="txt_choseLoca">Bạn đã chọn địa điểm</string>
    <string name="txt_failaddfoodcate">Error: Không thể thêm loại món mới</string>
    <string name="txt_plzwait">Please wait &#8230;</string>
    <string name="txt_logging">Đang đăng nhập &#8230;</string>
    <string name="txt_addinloca">Đang thêm địa điểm mới &#8230;</string>
    <string name="txt_addinmon">Đang thêm món mới &#8230;</string>
    <string name="txt_addinpost">Đang đăng review mới &#8230;</string>
    <string name="txt_logginout">Đang đăng xuất &#8230;</string>
    <string name="txt_addinfoodcate">Đang thêm loại món ăn mới &#8230;</string>
    <string name="txt_choose">Chọn</string>
    <string name="txt_chosefromloca">Bộ nhớ</string>
    <string name="txt_chosefromuploaded">Ảnh đã đăng</string>
    <string name="txt_lastnews">Tin cuối</string>
    <string name="txt_mostcomment">Quan tâm</string>
    <string name="txt_mostlike">Yêu thích</string>
    <string name="txt_myloca">Vị trí của tôi</string>
    <string name="txt_choseloca">Chọn địa điểm</string>
    <string name="txt_review">Review</string>
    <string name="txt_quanan">Quán ăn</string>
    <string name="txt_album">Album</string>
    <string name="txt_dsMon">Danh sách món ăn</string>
    <string name="txt_addedMon">Đã thêm món mới</string>
    <string name="txt_entrySearch">Nhập địa điểm &#8230;</string>
    <string name="txt_filter">Phân loại:</string>
    <string name="txt_searchFilter">Lọc</string>
    <string name="txt_local">Vị trí:</string>
    <string name="txt_localview">Xem theo Quán ăn\t</string>
    <string name="txt_reviewview">Xem theo Review\t</string>
    <string name="txt_reportStore">Reports</string>
    <string name="firebase_path">https://com-nha.firebaseio.com</string>
    <string name="firebaseStorage_path">gs://com-nha.appspot.com/</string>
    <string name="nav_homepage">Trang chủ</string>
    <string name="nav_map">Bản đồ</string>
    <string name="nav_uploadedimg">Ảnh đã đăng</string>
    <string name="nav_activities">Hoạt động</string>
    <string name="nav_profile">Thông tin cá nhân</string>
    <string name="nav_activity">Activities</string>
    <string name="check1">Axt6OfAdQ9gd2pmxUqEK4wvHyal2</string>
    <string name="check2">5NX62wZ6JBQNu8zPNydI6qeJC5I3</string>
    <string name="DATA_FROM_FRAG">datafromfrag</string>
    <string name="frag_localist_CODE">localist</string>
    <string name="frag_about_CODE">about</string>
    <string name="frag_chooseimg_CODE">chooseimg</string>
    <string name="frag_chooseloca_CODE">chooseloca</string>
    <string name="frag_addloca_CODE">addloca</string>
    <string name="frag_map_CODE">map</string>
    <string name="frag_addpost_CODE">addpost</string>
    <string name="frg_viewpost_CODE">viewpost</string>
    <string name="frg_signup_CODE">signup</string>
    <string name="frg_signin_CODE">signin</string>
    <string name="frg_viewalbum_CODE">viewalbum</string>
    <string name="frg_prodetail_CODE">profiledetail</string>
    <string name="frg_themmon_CODE">themmon</string>
    <string name="frag_locadetail_CODE">locadetail</string>
    <string name="frag_vote_CODE">vote</string>
    <string name="fragment_CODE">FRAGMENTCODE</string>
    <string name="key_CODE">KEYCODE</string>
    <string name="keyPost_CODE">KEYPOSTCODE</string>
    <string name="keyloca_CODE">KEYLOCACODE</string>
    <string name="fromFrag">from fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="users_CODE">Users/</string>
    <string name="reports_CODE">Reports/</string>
    <string name="thucdon_CODE">Food/</string>
    <string name="locathucdon_CODE">StoreFood/</string>
    <string name="locations_CODE">Stores/</string>
    <string name="posts_CODE">Posts/</string>
    <string name="images_CODE">Images/</string>
    <string name="locationpost_CODE">StorePost/</string>
    <string name="userpost_CODE">UserPost/</string>
    <string name="comments_CODE">Comments/</string>
    <string name="postcomment_CODE">PostComment/</string>
    <string name="locauserpost_CODE">StoreUserPost/</string>
    <string name="menulocation_CODE">FoodLocation/</string>
    <string name="usertrackloca_CODE">UserTrackLoca/</string>
    <string name="common_CODE">Common/</string>
    <string name="district_CODE">District/</string>
    <string name="foodcategory_CODE">FoodCategory/</string>
    <string name="action_example">Example action</string>
    <string name="action_more">More</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="action_addpost">Đăng review</string>
    <string name="action_addloca">Thêm địa điểm</string>
    <string name="action_changeloca">Vị trí</string>
    <string name="menu_locadetail_themmon">Thêm món ăn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>