<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/L1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_ho"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_ho"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_tenLot"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:hint="@string/text_tenLot"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_ten"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:hint="@string/text_ten"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/L2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/L1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_birth"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_birth"
                android:inputType="date" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/text_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/text_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText_confirmPass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/text_confirmPass"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/butt_signup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_signup" />
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>
