<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frg_post"
    tools:context="com.app.ptt.comnha.PostFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/L_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_choselocat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_chooseLocation" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_title"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:gravity="top"
                android:hint="@string/text_content"
                android:inputType="textMultiLine" />
            <Button
                android:id="@+id/btn_save"
                android:text="@string/text_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/L_1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_upImage" />

            <Button
                android:id="@+id/btn_hashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hashtag" />

            <Button
                android:id="@+id/btn_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vote" />
        </LinearLayout>
    </RelativeLayout>


</FrameLayout>
