<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_homepage_black_24dp"
            android:title="@string/nav_homepage" />
        <item
            android:id="@+id/nav_uploadedimg"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_uploadedimg" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
