<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.ptt.comnha.SigninFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/frg_si_L1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:gravity="start"
                    android:id="@+id/edt_siFrg_username"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_username"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edt_siFrg_password"
                    android:gravity="start"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_siFrg_signin"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_signin" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btn_siFrg_exit"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/text_exit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frg_si_L1"
            android:layout_marginTop="300dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/butt_siFrg_loginFB"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/text_loginFB" />

            <Button
                android:theme="@style/AppTheme.Button"
                android:id="@+id/butt_siFrg_loginGmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/text_loginGmail" />

            <TextView
                android:id="@+id/txt_siFrg_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/text_forgotPass"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
