<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.app.ptt.comnha.AddFoodCategoryDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/frg_addfcategory_edtname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_foodcateName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frg_addfcategory_btncancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/frg_addfcategory_btnaddnew"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add"
                android:textAllCaps="false" />


        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
